--- a/DocumentManagementSystem/Views/Document/VievHTMLDocument.cshtml
+++ b/DocumentManagementSystem/Views/Document/VievHTMLDocument.cshtml
@@ -9,18 +9,26 @@
 
 <html>
 <head>
+    <title>Belge Görüntüleme</title>
+    <link rel="icon" href="~/image/site/BozokIcon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Marck+Script&family=Merriweather:wght@700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/Content/DocumentTemplate1.css">
+    <link rel="stylesheet" href="~/AdminLTE-3.0.4/dist/css/adminlte.min.css">
 </head>
 
 
 <body>
 
-    @if (Model == null)
+    @if (Model == null || Model.documentCreateSignatures.Count == 0)
     {
-        <a>Görüntülenecek Veri Bulunamadı !</a>
+        <br />
+        <div class="card bg-light">
+            <div class="card-body">
+                <h5 class="text-center">Görüntülenecek Veri Bulunamadı !</h5>
+            </div>
+        </div>
     }
     else
     {
