--- a/DocumentManagementSystem/Views/Document/VievPDFDocument.cshtml
+++ b/DocumentManagementSystem/Views/Document/VievPDFDocument.cshtml
@@ -4,22 +4,26 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="col-md-12">
-    <object data="@ViewBag.PDFUrl" type="application/pdf" width="100%" height="900px" />
-</div>
 
 @if (ViewBag.PDFUrl != null)
 {
-
-
-
+    <div class="col-md-12">
+        <object data="@ViewBag.PDFUrl" type="application/pdf" width="100%" height="900px" />
+    </div>
 }
 else
 {
-    <div class="col-md-12">
-        <p>Bir Sorun Oluştu:@(ViewBag.Error != null ? ViewBag.Error : "Hata mesajı gösterilemiyor.")</p>
+    <br />
+    <div class="card bg-light">
+        <div class="card-body">
+            <h5>@ViewBag.Error</h5>
+        </div>
     </div>
 }
+
+
+
+
 
 
 
