--- a/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -323,7 +323,7 @@
 
                         <li class="nav-header">Kullanıcı İşlemleri</li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="@Url.Action("AdminProfile","Admin")" class="nav-link">
                                 <i class="nav-icon fas fa-user"></i>
                                 <p>
                                     Profil Sayfası
