--- a/DocumentManagementSystem/Content/DocumentTemplate1.css
+++ b/DocumentManagementSystem/Content/DocumentTemplate1.css
@@ -28,7 +28,7 @@ body {
 .cert {
   color: #3e0e0e;
   background-color: #fff;
-  background-image: url("https://iili.io/HXshBpI.jpg");
+  background-image: url("");
   background-position: right bottom;
   background-size: cover;
   background-repeat: no-repeat;
