--- a/DocumentManagementSystem/Views/Shared/_StudentLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_StudentLayout.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
