--- a/DocumentManagementSystem/Views/Document/VievHTMLDocument.cshtml
+++ b/DocumentManagementSystem/Views/Document/VievHTMLDocument.cshtml
@@ -5,7 +5,6 @@
     Layout = "";
 }
 
-@*<img src=" @Model.DocumentBacgrounImage " alt="alternatetext">*@
 
 <html>
 <head>
@@ -43,7 +42,7 @@
                         </div>
 
                         <div class="cert-title">@Model.DocumentName</div>
-                        <div class="cert-no">1897/B3/GT.06.03/2023</div>
+                        @*<div class="cert-no">1897/B3/GT.06.03/2023</div>*@
                     </div>
 
                     <div class="cert-content">
