--- a/DocumentManagementSystem/Views/ErrorPage/Page500.cshtml
+++ b/DocumentManagementSystem/Views/ErrorPage/Page500.cshtml
@@ -56,6 +56,8 @@
                 <a href="@Url.Action("Home","Home")">Ana Sayfa</a>
             </div>
             <!-- <a href="#">Back To Homepage</a> -->
+            <a href="https://yenibilgi.bozok.edu.tr/sayfa/iletisim,tr-3968.aspx" target="_blank">Hatayı Bildirmek İçin Tıklayın</a>
+
         </div>
     </div>
 
