--- a/DocumentManagementSystem/Views/Document/VievHTMLDocument.cshtml
+++ b/DocumentManagementSystem/Views/Document/VievHTMLDocument.cshtml
@@ -63,7 +63,7 @@
                                 @if (item.SignatureStatus)
                                 {
                                     <div class="cert-signature-sign">
-                                        <img src="~/image/site/imza3.png" />
+                                        <img src="@item.AdminSignatureImage" />
 
                                     </div>
                                 }
