--- a/DocumentManagementSystem/Views/StudentPanel/Documents.cshtml
+++ b/DocumentManagementSystem/Views/StudentPanel/Documents.cshtml
@@ -34,8 +34,7 @@ else
                         <td>@documentItem.DocumentType.DocumentTypeName</td>
                         <td>@(documentItem.DocumentStatus ? "İmzalı" : "İmzasız")</td>
                         <td>@documentItem.DocumentCreateDate.ToString("g")</td>
-                        <td style="text-align:center"><a href="/Document/VievHTMLDocument/@documentItem.DocumentID" class="btn btn-primary">Görüntüle</a></td>
-                        <td style="text-align:center"><a href="/Document/GeneratePDF/@documentItem.DocumentID" class="btn btn-primary">PDF İndir</a></td>
+                        <td style="text-align:center"><button onclick="downloadPDF('@( @Request.Url.Authority+documentItem.DocumentPdfUrl )', '@documentItem.DocumentType.DocumentTypeName')" class="btn btn-primary">PDF İndir</button></td>
                     </tr>
                 }
             </table>
@@ -43,4 +42,5 @@ else
     </div>
 
 }
+
 
