--- a/DocumentManagementSystem/Views/StudentPanel/Documents.cshtml
+++ b/DocumentManagementSystem/Views/StudentPanel/Documents.cshtml
@@ -24,7 +24,7 @@ else
                     <th>Belge Durumu</th>
                     <th>Oluşturma Tarihi</th>
                     <th>Görüntüle</th>
-                    <th>PDF Al</th>
+                    <th>PDF İndir</th>
 
                 </tr>
                 @foreach (var documentItem in Model)
@@ -34,7 +34,8 @@ else
                         <td>@documentItem.DocumentType.DocumentTypeName</td>
                         <td>@(documentItem.DocumentStatus ? "İmzalı" : "İmzasız")</td>
                         <td>@documentItem.DocumentCreateDate.ToString("g")</td>
-                        <td style="text-align:center"><button onclick="downloadPDF('@( @Request.Url.Authority+documentItem.DocumentPdfUrl )', '@documentItem.DocumentType.DocumentTypeName')" class="btn btn-primary">PDF İndir</button></td>
+                        <td style="text-align:center"><button onclick="viewPDF('@(  "https://"+@Request.Url.Authority+documentItem.DocumentPdfUrl )')" class="btn btn-primary">Görüntüle</button></td>
+                        <td style="text-align:center"><button onclick="downloadPDF('@(  "https://"+@Request.Url.Authority+documentItem.DocumentPdfUrl )', '@documentItem.DocumentType.DocumentTypeName')" class="btn btn-primary">PDF İndir</button></td>
                     </tr>
                 }
             </table>
