--- a/DocumentManagementSystem/Views/Student/StudentList.cshtml
+++ b/DocumentManagementSystem/Views/Student/StudentList.cshtml
@@ -17,7 +17,7 @@
                 <th>Ad Soyad</th>
                 <th>Numara/Mail</th>
                 <th>Üniversite Kayıt</th>
-                <th>Program</th>
+                <th>Bölüm</th>
                 <th>Tanımlanmış Belgeler</th>
 
             </tr>
